fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/QM_NotificationSet__x.object-meta.xml
<CustomObject>
    <externalDataSource>SAP_OData</externalDataSource>
    <externalName>QM_NotificationSet</externalName>
    <label>QM_NotificationSet</label>
    <pluralLabel>QM_NotificationSet</pluralLabel>
</CustomObject>