fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <description>Author</description>
    <externalDeveloperName>Author</externalDeveloperName>
    <label>Author</label>
    <length>12</length>
    <type>Text</type>
</CustomField>