fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/Charg__c.field-meta.xml
<CustomField>
    <fullName>Charg__c</fullName>
    <description>Charg</description>
    <externalDeveloperName>Charg</externalDeveloperName>
    <label>Charg</label>
    <length>10</length>
    <type>Text</type>
</CustomField>