fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/Matnr__c.field-meta.xml
<CustomField>
    <fullName>Matnr__c</fullName>
    <description>Matnr</description>
    <externalDeveloperName>Matnr</externalDeveloperName>
    <label>Matnr</label>
    <length>18</length>
    <type>Text</type>
</CustomField>