fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/Mncod__c.field-meta.xml
<CustomField>
    <fullName>Mncod__c</fullName>
    <description>Mncod</description>
    <externalDeveloperName>Mncod</externalDeveloperName>
    <label>Mncod</label>
    <length>4</length>
    <type>Text</type>
</CustomField>