fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/Qmtxt__c.field-meta.xml
<CustomField>
    <fullName>Qmtxt__c</fullName>
    <description>Qmtxt</description>
    <externalDeveloperName>Qmtxt</externalDeveloperName>
    <label>Qmtxt</label>
    <length>40</length>
    <type>Text</type>
</CustomField>