fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/Rgmng__c.field-meta.xml
<CustomField>
    <fullName>Rgmng__c</fullName>
    <description>Rgmng</description>
    <externalDeveloperName>Rgmng</externalDeveloperName>
    <label>Rgmng</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>