fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/Rkmng__c.field-meta.xml
<CustomField>
    <fullName>Rkmng__c</fullName>
    <description>Rkmng</description>
    <externalDeveloperName>Rkmng</externalDeveloperName>
    <label>Rkmng</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>