fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/Serialnr__c.field-meta.xml
<CustomField>
    <fullName>Serialnr__c</fullName>
    <description>Serialnr</description>
    <externalDeveloperName>Serialnr</externalDeveloperName>
    <label>Serialnr</label>
    <length>18</length>
    <type>Text</type>
</CustomField>