fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ShipTo__c.field-meta.xml
<CustomField>
    <fullName>ShipTo__c</fullName>
    <description>ShipTo</description>
    <externalDeveloperName>ShipTo</externalDeveloperName>
    <label>ShipTo</label>
    <length>12</length>
    <type>Text</type>
</CustomField>