fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/SoldTo__c.field-meta.xml
<CustomField>
    <fullName>SoldTo__c</fullName>
    <description>SoldTo</description>
    <externalDeveloperName>SoldTo</externalDeveloperName>
    <label>SoldTo</label>
    <length>12</length>
    <type>Text</type>
</CustomField>