fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/Zzawrdt__c.field-meta.xml
<CustomField>
    <fullName>Zzawrdt__c</fullName>
    <description>Zzawrdt</description>
    <externalDeveloperName>Zzawrdt</externalDeveloperName>
    <label>Zzawrdt</label>
    <type>DateTime</type>
</CustomField>