fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzbpContact__c.field-meta.xml
<CustomField>
    <fullName>ZzbpContact__c</fullName>
    <description>ZzbpContact</description>
    <externalDeveloperName>ZzbpContact</externalDeveloperName>
    <label>ZzbpContact</label>
    <length>35</length>
    <type>Text</type>
</CustomField>