fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzbpContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ZzbpContactEmail__c</fullName>
    <description>ZzbpContactEmail</description>
    <externalDeveloperName>ZzbpContactEmail</externalDeveloperName>
    <label>ZzbpContactEmail</label>
    <length>241</length>
    <type>Text</type>
</CustomField>