fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzbpContactTel__c.field-meta.xml
<CustomField>
    <fullName>ZzbpContactTel__c</fullName>
    <description>ZzbpContactTel</description>
    <externalDeveloperName>ZzbpContactTel</externalDeveloperName>
    <label>ZzbpContactTel</label>
    <length>30</length>
    <type>Text</type>
</CustomField>