fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzbpContactTitle__c.field-meta.xml
<CustomField>
    <fullName>ZzbpContactTitle__c</fullName>
    <description>ZzbpContactTitle</description>
    <externalDeveloperName>ZzbpContactTitle</externalDeveloperName>
    <label>ZzbpContactTitle</label>
    <length>40</length>
    <type>Text</type>
</CustomField>