fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzcurrCond__c.field-meta.xml
<CustomField>
    <fullName>ZzcurrCond__c</fullName>
    <description>ZzcurrCond</description>
    <externalDeveloperName>ZzcurrCond</externalDeveloperName>
    <label>ZzcurrCond</label>
    <length>40</length>
    <type>Text</type>
</CustomField>