fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzcurrCondInd__c.field-meta.xml
<CustomField>
    <fullName>ZzcurrCondInd__c</fullName>
    <description>ZzcurrCondInd</description>
    <externalDeveloperName>ZzcurrCondInd</externalDeveloperName>
    <label>ZzcurrCondInd</label>
    <length>1</length>
    <type>Text</type>
</CustomField>