fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzdeviceUser__c.field-meta.xml
<CustomField>
    <fullName>ZzdeviceUser__c</fullName>
    <description>ZzdeviceUser</description>
    <externalDeveloperName>ZzdeviceUser</externalDeveloperName>
    <label>ZzdeviceUser</label>
    <length>35</length>
    <type>Text</type>
</CustomField>