fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzdeviceUserEmail__c.field-meta.xml
<CustomField>
    <fullName>ZzdeviceUserEmail__c</fullName>
    <description>ZzdeviceUserEmail</description>
    <externalDeveloperName>ZzdeviceUserEmail</externalDeveloperName>
    <label>ZzdeviceUserEmail</label>
    <length>241</length>
    <type>Text</type>
</CustomField>