fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzdeviceUserTel__c.field-meta.xml
<CustomField>
    <fullName>ZzdeviceUserTel__c</fullName>
    <description>ZzdeviceUserTel</description>
    <externalDeveloperName>ZzdeviceUserTel</externalDeveloperName>
    <label>ZzdeviceUserTel</label>
    <length>30</length>
    <type>Text</type>
</CustomField>