fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzdeviceUserTitle__c.field-meta.xml
<CustomField>
    <fullName>ZzdeviceUserTitle__c</fullName>
    <description>ZzdeviceUserTitle</description>
    <externalDeveloperName>ZzdeviceUserTitle</externalDeveloperName>
    <label>ZzdeviceUserTitle</label>
    <length>40</length>
    <type>Text</type>
</CustomField>