fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzdevOthr__c.field-meta.xml
<CustomField>
    <fullName>ZzdevOthr__c</fullName>
    <description>ZzdevOthr</description>
    <externalDeveloperName>ZzdevOthr</externalDeveloperName>
    <label>ZzdevOthr</label>
    <length>19</length>
    <type>Text</type>
</CustomField>