fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzdtCompleted__c.field-meta.xml
<CustomField>
    <fullName>ZzdtCompleted__c</fullName>
    <description>ZzdtCompleted</description>
    <externalDeveloperName>ZzdtCompleted</externalDeveloperName>
    <label>ZzdtCompleted</label>
    <type>DateTime</type>
</CustomField>