fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzdtEstimated__c.field-meta.xml
<CustomField>
    <fullName>ZzdtEstimated__c</fullName>
    <description>ZzdtEstimated</description>
    <externalDeveloperName>ZzdtEstimated</externalDeveloperName>
    <label>ZzdtEstimated</label>
    <length>1</length>
    <type>Text</type>
</CustomField>