fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/Zzevtdt__c.field-meta.xml
<CustomField>
    <fullName>Zzevtdt__c</fullName>
    <description>Zzevtdt</description>
    <externalDeveloperName>Zzevtdt</externalDeveloperName>
    <label>Zzevtdt</label>
    <type>DateTime</type>
</CustomField>