fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/Zzintervent__c.field-meta.xml
<CustomField>
    <fullName>Zzintervent__c</fullName>
    <description>Zzintervent</description>
    <externalDeveloperName>Zzintervent</externalDeveloperName>
    <label>Zzintervent</label>
    <length>1</length>
    <type>Text</type>
</CustomField>