fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzintrvntT__c.field-meta.xml
<CustomField>
    <fullName>ZzintrvntT__c</fullName>
    <description>ZzintrvntT</description>
    <externalDeveloperName>ZzintrvntT</externalDeveloperName>
    <label>ZzintrvntT</label>
    <length>40</length>
    <type>Text</type>
</CustomField>