fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzocBirthDef__c.field-meta.xml
<CustomField>
    <fullName>ZzocBirthDef__c</fullName>
    <description>ZzocBirthDef</description>
    <externalDeveloperName>ZzocBirthDef</externalDeveloperName>
    <label>ZzocBirthDef</label>
    <length>1</length>
    <type>Text</type>
</CustomField>