fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzocDisable__c.field-meta.xml
<CustomField>
    <fullName>ZzocDisable__c</fullName>
    <description>ZzocDisable</description>
    <externalDeveloperName>ZzocDisable</externalDeveloperName>
    <label>ZzocDisable</label>
    <length>1</length>
    <type>Text</type>
</CustomField>