fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzocHospital__c.field-meta.xml
<CustomField>
    <fullName>ZzocHospital__c</fullName>
    <description>ZzocHospital</description>
    <externalDeveloperName>ZzocHospital</externalDeveloperName>
    <label>ZzocHospital</label>
    <length>1</length>
    <type>Text</type>
</CustomField>