fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzocInterven__c.field-meta.xml
<CustomField>
    <fullName>ZzocInterven__c</fullName>
    <description>ZzocInterven</description>
    <externalDeveloperName>ZzocInterven</externalDeveloperName>
    <label>ZzocInterven</label>
    <length>1</length>
    <type>Text</type>
</CustomField>