fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzocLife__c.field-meta.xml
<CustomField>
    <fullName>ZzocLife__c</fullName>
    <description>ZzocLife</description>
    <externalDeveloperName>ZzocLife</externalDeveloperName>
    <label>ZzocLife</label>
    <length>1</length>
    <type>Text</type>
</CustomField>