fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzocOther__c.field-meta.xml
<CustomField>
    <fullName>ZzocOther__c</fullName>
    <description>ZzocOther</description>
    <externalDeveloperName>ZzocOther</externalDeveloperName>
    <label>ZzocOther</label>
    <length>1</length>
    <type>Text</type>
</CustomField>