fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/Zzowner__c.field-meta.xml
<CustomField>
    <fullName>Zzowner__c</fullName>
    <description>Zzowner</description>
    <externalDeveloperName>Zzowner</externalDeveloperName>
    <label>Zzowner</label>
    <length>35</length>
    <type>Text</type>
</CustomField>