fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzownerEmail__c.field-meta.xml
<CustomField>
    <fullName>ZzownerEmail__c</fullName>
    <description>ZzownerEmail</description>
    <externalDeveloperName>ZzownerEmail</externalDeveloperName>
    <label>ZzownerEmail</label>
    <length>241</length>
    <type>Text</type>
</CustomField>