fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzownerTitle__c.field-meta.xml
<CustomField>
    <fullName>ZzownerTitle__c</fullName>
    <description>ZzownerTitle</description>
    <externalDeveloperName>ZzownerTitle</externalDeveloperName>
    <label>ZzownerTitle</label>
    <length>40</length>
    <type>Text</type>
</CustomField>