fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzpAge__c.field-meta.xml
<CustomField>
    <fullName>ZzpAge__c</fullName>
    <description>ZzpAge</description>
    <externalDeveloperName>ZzpAge</externalDeveloperName>
    <label>ZzpAge</label>
    <length>3</length>
    <type>Text</type>
</CustomField>