fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzpAgeUom__c.field-meta.xml
<CustomField>
    <fullName>ZzpAgeUom__c</fullName>
    <description>ZzpAgeUom</description>
    <externalDeveloperName>ZzpAgeUom</externalDeveloperName>
    <label>ZzpAgeUom</label>
    <length>1</length>
    <type>Text</type>
</CustomField>