fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzpGender__c.field-meta.xml
<CustomField>
    <fullName>ZzpGender__c</fullName>
    <description>ZzpGender</description>
    <externalDeveloperName>ZzpGender</externalDeveloperName>
    <label>ZzpGender</label>
    <length>1</length>
    <type>Text</type>
</CustomField>