fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/Zzprocedure__c.field-meta.xml
<CustomField>
    <fullName>Zzprocedure__c</fullName>
    <description>Zzprocedure</description>
    <externalDeveloperName>Zzprocedure</externalDeveloperName>
    <label>Zzprocedure</label>
    <length>40</length>
    <type>Text</type>
</CustomField>