fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzpWt__c.field-meta.xml
<CustomField>
    <fullName>ZzpWt__c</fullName>
    <description>ZzpWt</description>
    <externalDeveloperName>ZzpWt</externalDeveloperName>
    <label>ZzpWt</label>
    <length>3</length>
    <type>Text</type>
</CustomField>