fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzpWtUom__c.field-meta.xml
<CustomField>
    <fullName>ZzpWtUom__c</fullName>
    <description>ZzpWtUom</description>
    <externalDeveloperName>ZzpWtUom</externalDeveloperName>
    <label>ZzpWtUom</label>
    <length>3</length>
    <type>Text</type>
</CustomField>