fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/Zzqmnum__c.field-meta.xml
<CustomField>
    <fullName>Zzqmnum__c</fullName>
    <description>Zzqmnum</description>
    <externalDeveloperName>Zzqmnum</externalDeveloperName>
    <label>Zzqmnum</label>
    <length>12</length>
    <type>Text</type>
</CustomField>