fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzsfdcNum__c.field-meta.xml
<CustomField>
    <fullName>ZzsfdcNum__c</fullName>
    <description>ZzsfdcNum</description>
    <externalDeveloperName>ZzsfdcNum</externalDeveloperName>
    <label>ZzsfdcNum</label>
    <length>8</length>
    <type>Text</type>
</CustomField>