fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/Zzusage__c.field-meta.xml
<CustomField>
    <fullName>Zzusage__c</fullName>
    <description>Zzusage</description>
    <externalDeveloperName>Zzusage</externalDeveloperName>
    <label>Zzusage</label>
    <length>1</length>
    <type>Text</type>
</CustomField>