fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/ZzuseProced__c.field-meta.xml
<CustomField>
    <fullName>ZzuseProced__c</fullName>
    <description>ZzuseProced</description>
    <externalDeveloperName>ZzuseProced</externalDeveloperName>
    <label>ZzuseProced</label>
    <length>1</length>
    <type>Text</type>
</CustomField>