fullSandbox11072023/force-app/main/default/objects/QM_NotificationSet__x/fields/Zzuser__c.field-meta.xml
<CustomField>
    <fullName>Zzuser__c</fullName>
    <description>Zzuser</description>
    <externalDeveloperName>Zzuser</externalDeveloperName>
    <label>Zzuser</label>
    <length>12</length>
    <type>Text</type>
</CustomField>